# xmrig

./: .gitignore  CMakeLists.txt  README.md  package.json  run_tests.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  deploy.yml  test.yml
cmake/: FindUV.cmake  OpenSSL.cmake  asm.cmake  flags.cmake  os.cmake  randomx.cmake
doc/: ALGORITHMS.md
scripts/: build.hwloc1.sh  build.openssl.sh  build.openssl3.sh  build.uv.sh  generate_cl.js
src/: App.cpp  config.json  version.h
src/backend/common/: Tags.h  Threads.cpp
src/backend/cpu/: CpuBackend.cpp  CpuConfig_gen.h  CpuWorker.cpp  CpuWorker.h
src/backend/cpu/platform/: BasicCpuInfo.cpp  BasicCpuInfo_arm.cpp  HwlocCpuInfo.cpp
src/backend/cuda/: CudaConfig_gen.h
src/backend/opencl/: OclConfig_gen.h  OclThread.h  OclWorker.cpp  opencl.cmake
src/backend/opencl/cl/: OclSource.cpp
src/backend/opencl/cl/cn/: algorithm.cl  cryptonight_cl.h
src/backend/opencl/cl/rx/: randomx.cl  randomx_cl.h
src/backend/opencl/wrappers/: OclDevice.cpp
src/base/: base.cmake
src/base/crypto/: Algorithm.cpp  Algorithm.h  Coin.cpp  Coin.h
src/base/io/log/: Log.h  Tags.cpp  Tags.h
src/base/kernel/config/: BaseConfig.cpp  BaseConfig.h  BaseTransform.cpp
src/base/kernel/interfaces/: IConfig.h
src/base/net/stratum/: AutoClient.cpp  Client.cpp  DaemonClient.cpp  EthStratumClient.cpp  Pool.cpp  Pool.h  Pools.cpp
src/base/net/stratum/benchmark/: BenchClient.cpp
src/base/tools/cryptonote/: WalletAddress.cpp
src/core/: Controller.cpp  Controller.h  Miner.cpp  MoBenchmark.cpp
src/core/config/: Config.cpp  Config.h  Config_platform.h  usage.h
src/crypto/cn/: CnAlgo.h  CnHash.cpp  CnHash.h  CryptoNight.h  CryptoNight_arm.h  CryptoNight_test.h  CryptoNight_x86.h
src/crypto/cn/gpu/: cn_gpu_arm.cpp
src/crypto/common/: VirtualMemory_unix.cpp
src/crypto/flex/: flex.cpp
src/crypto/ghostrider/: ghostrider.cpp  sph_keccak.c  sph_keccak.h
src/crypto/randomx/: common.hpp  jit_compiler_a64.cpp  jit_compiler_x86.cpp  randomx.cpp  randomx.h  vm_compiled.cpp
src/crypto/rx/: RxAlgo.cpp  RxConfig.cpp
src/net/: JobResults.cpp  Network.cpp
src/net/strategies/: DonateStrategy.cpp
tests/common/: hash_harness.js  miner_harness.js
tests/hash/: CMakeLists.txt  check.sh  cpu_threads_stubs.cpp  log_stubs.cpp  main.cpp
